[package]
name = "vkc-lib"
description = "A simple Vulkan compute library"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/pi4erd/compute-vulkan.git"
readme = "README.md"
license = "MIT"
publish = true

[dependencies]
vkl = { version = "0.1.0", path = "../vkl" }
log = "0.4.28"
shaderc = { version = "0.10", features = ["build-from-source", "prefer-static-linking"] }
bytemuck = "1.24.0"
